# nostr-likes

./: Cargo.toml  README.md
src/: main.rs
