[package]
name = "nostr-likes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bech32 = "0.9.1"
clap = { version = "4.1.8", features = ["derive"] }
nostr-sdk = "0.19.1"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
xdg = "2.4.1"
